# HopeYouBeKind

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  COMPLETE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TEMP.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
connectors/minisync/: .gitignore  Cargo.toml  README.md
connectors/minisync/src/: config.rs  ipc.rs  lib.rs  main.rs  meshd.rs  mock.rs
connectors/minisync/src/sync/: manifest.rs  mod.rs  wire.rs
connectors/minisync/tests/: integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: cookie.rs  custom.rs  lib.rs  rekey.rs  replay.rs  session.rs  suite.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: exit.rs  main.rs  membership.rs
crates/dht/: Cargo.toml
crates/dht/src/: lib.rs  node.rs  rpc.rs  server.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  monitor.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/membership/: Cargo.toml
crates/membership/src/: lib.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: charter.rs  crypto.rs  dataplane.rs  discovery.rs  invitewrap.rs  ipc.rs  keydist.rs  lib.rs  membership.rs  policy.rs  registry.rs  roster.rs
crates/meshd/: Cargo.toml  build.rs
crates/meshd/src/: dht.rs  exit.rs  main.rs
crates/meshrun/: Cargo.toml
crates/meshrun/src/: lan.rs  lib.rs  main.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs  nat.rs  relay.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: flow.rs  ipc.rs  lib.rs  wire.rs  wire_v2.rs
crates/tun/: Cargo.toml
crates/tun/src/: lib.rs  linux.rs  macos.rs  windows.rs
docs/: ANONYMITY.md  ARCHITECTURE.md  AUTO_EXIT.md  CIPHER_TIMEWINDOW.md  CRYPTO_SUITE.md  CRYPTO_SURFACE.md  DAEMON_SELF_HEALING.md  DATA_PLANE.md  DHT_RENDEZVOUS.md  DISCOVERY.md  DYNAMIC_NETWORK.md  ERRORS.md  EXIT_NODE.md  EXIT_POLICY.md  EXPULSION.md  EXTENSIONS.md  FEATURES.md  FLOW_TABLE.md  GUI.md  GUI_CRYPTO.md  GUI_PAGES.md  HEALTH_CHECK.md  IPV6_PLAN.md  MATHEMATICAL_MODEL.md  MEMBERSHIP.md  MESH_DNS.md  MESH_V2.md  PROTOCOL_DESIGN.md  README.md  RELAY.md  ROADMAP.md  SDN_DHT_ARCHITECTURE.md  SECURITY.md  TRAFFIC_MONITOR.md  USAGE.md
docs/blog/: building-a-serverless-mesh-vpn.md
docs/guides/: README.md  cli-reference.en.md  cli-reference.ko.md  cookbook.en.md  cookbook.ko.md  getting-started.en.md  getting-started.ko.md  server-setup.en.md  server-setup.ko.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: stun_parse.rs  wire_decode.rs
gui/: README.md  index.html  package-lock.json  package.json  vite.config.js
gui-admin/: index.html  package-lock.json  vite.config.js
gui-admin/src/: main.js  styles.css
gui-admin/src-tauri/: Cargo.toml  tauri.conf.json
gui-admin/src-tauri/src/: main.rs
gui/demo/: .gitignore  README.md  fit-window.sh  lib.sh  nodes.sh  probe.sh  shot.sh
gui/src/: main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
gui/src-tauri/resources/: lattice-daemon
gui/src-tauri/src/: main.rs
legacy/: README.md
legacy/crates/cli/: Cargo.toml
legacy/crates/cli/src/: main.rs
legacy/crates/crypto/: Cargo.toml
legacy/crates/crypto/src/: lib.rs  replay.rs  suite.rs
legacy/crates/daemon/src/: exit.rs  main.rs
legacy/crates/dht/src/: distance.rs  lib.rs  node.rs  routing.rs  server.rs
legacy/crates/engine/: Cargo.toml
legacy/crates/engine/src/: monitor.rs
legacy/crates/ipc/: Cargo.toml
legacy/crates/ipc/src/: lib.rs
legacy/docs/: ADMIN_CONSOLE.md  CRYPTO_SUITE.md  HEALTH_CHECK.md  PROTOCOL.md  TRAFFIC_MONITOR.md  USAGE.md
legacy/gui-admin/: README.md  index.html  package.json
legacy/gui-admin/src/: styles.css
legacy/gui-admin/src-tauri/: Cargo.toml
legacy/gui-admin/src-tauri/icons/: icon.icns
legacy/gui-admin/src-tauri/src/: main.rs
scripts/: build-app.sh  install-mac.sh  lattice  opsec-scan.sh
