# Lattice — a serverless mesh VPN / overlay SDN.
#
# This is a Cargo *workspace*. Each crate owns one architectural concern so that
# features, tests, and version bumps can move independently. Shared dependency
# versions are pinned once in [workspace.dependencies] below and inherited by
# every crate via `dep.workspace = true`, which keeps the whole tree on a single
# coherent set of versions when you bump.
[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/crypto",
    "crates/tun",
    "crates/net",
    "crates/overlay",
    "crates/engine",
    "crates/ipc",
    "crates/daemon",
    "crates/cli",
]
# The Tauri GUI lives in gui/src-tauri but is intentionally NOT a workspace
# member: it pulls the heavy Tauri/webview toolchain and is built via
# `cargo tauri`, so keeping it out lets `cargo check` on the core stay fast.
exclude = ["gui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"
authors = ["Lattice contributors"]
repository = "https://github.com/your-org/lattice"
homepage = "https://github.com/your-org/lattice"
description = "A serverless mesh VPN that fuses every installed node into one overlay SDN."
keywords = ["vpn", "mesh", "overlay", "sdn", "p2p"]
categories = ["network-programming"]

# Single source of truth for dependency versions. Crates reference these with
# `foo.workspace = true`. Bump here once; the whole workspace follows.
[workspace.dependencies]
# --- async runtime & primitives ---
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "signal"] }
bytes = "1.6"
futures = "0.3"
async-trait = "0.1"
# --- serialization / wire format ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
# --- errors & diagnostics ---
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# --- crypto (vetted primitives; the custom protocol is built ON these) ---
snow = "0.9"            # Noise Protocol Framework — handshake building blocks
rand = "0.8"
zeroize = "1"           # wipe key material from memory
# --- networking building blocks ---
socket2 = "0.5"
mdns-sd = "0.11"        # serverless LAN peer discovery
# --- CLI ---
# Upper-bounded: clap 4.5's deps (clap_lex 1.x) require edition2024, which our
# pinned Rust 1.79 toolchain does not support. Lift this when we bump the MSRV.
clap = { version = ">=4.0.0, <4.5.0", features = ["derive"] }
# --- internal crates (path deps, versions inherited from workspace) ---
lattice-proto   = { path = "crates/proto", version = "0.2.0" }
lattice-crypto  = { path = "crates/crypto", version = "0.2.0" }
lattice-tun     = { path = "crates/tun", version = "0.2.0" }
lattice-net     = { path = "crates/net", version = "0.2.0" }
lattice-overlay = { path = "crates/overlay", version = "0.2.0" }
lattice-engine  = { path = "crates/engine", version = "0.2.0" }
lattice-ipc     = { path = "crates/ipc", version = "0.2.0" }

# Release profile: optimized, but keep thin debug info for crash triage.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# Faster local debug builds of dependencies without slowing your own code.
[profile.dev.package."*"]
opt-level = 2
