# Lattice — a serverless mesh VPN / overlay SDN.
#
# This is a Cargo *workspace*. Each crate owns one architectural concern so that
# features, tests, and version bumps can move independently. Shared dependency
# versions are pinned once in [workspace.dependencies] below and inherited by
# every crate via `dep.workspace = true`, which keeps the whole tree on a single
# coherent set of versions when you bump.
[workspace]
resolver = "2"
members = [
    # --- shared base (used by both the v2 product and the archived v1 stack) ---
    "crates/proto",
    "crates/tun",
    "crates/net",
    # --- v2 mesh product (the current direction; what the GUI ships as `meshd`) ---
    "crates/mesh",
    "crates/meshd",
    "crates/meshrun",
    # --- v1 (LEGACY, archived under legacy/) — kept as members so they still build
    #     and don't rot; not part of the current product. See legacy/README.md. ---
    "legacy/crates/crypto",
    "legacy/crates/overlay",
    "legacy/crates/engine",
    "legacy/crates/membership",
    "legacy/crates/dht",
    "legacy/crates/ipc",
    "legacy/crates/daemon",
    "legacy/crates/cli",
]
# The Tauri GUIs (gui/, legacy/gui-admin/) and the fuzz targets (fuzz/) are
# intentionally NOT workspace members: the GUIs pull the heavy Tauri/webview
# toolchain and are built via `cargo tauri`, and the fuzz crate depends on
# libfuzzer (nightly). Keeping them out lets `cargo check` on the core stay fast
# and stable-only.
exclude = ["gui", "legacy/gui-admin", "fuzz"]

[workspace.package]
version = "0.7.4"
edition = "2021"
rust-version = "1.79"
# Source-available & noncommercial. Commercial use OR academic publication →
# contact omnyx2@gmail.com (see LICENSE). The SPDX LicenseRef points at that file.
license = "LicenseRef-Lattice-Noncommercial"
authors = ["omnyx2 <omnyx2@gmail.com>"]
repository = "https://github.com/omnyx2/HopeYouBeKind"
homepage = "https://github.com/omnyx2/HopeYouBeKind"
description = "A serverless mesh VPN that fuses every installed node into one overlay SDN."
keywords = ["vpn", "mesh", "overlay", "sdn", "p2p"]
categories = ["network-programming"]

# Single source of truth for dependency versions. Crates reference these with
# `foo.workspace = true`. Bump here once; the whole workspace follows.
[workspace.dependencies]
# --- async runtime & primitives ---
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "signal"] }
bytes = "1.6"
futures = "0.3"
async-trait = "0.1"
# --- serialization / wire format ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
# --- errors & diagnostics ---
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# --- crypto (vetted primitives; the custom protocol is built ON these) ---
snow = "0.9"            # Noise Protocol Framework — handshake building blocks
rand = "0.8"
zeroize = "1"           # wipe key material from memory
blake2 = "0.10"         # keyed MAC for stateless handshake cookies
chacha20poly1305 = "0.10" # AEAD for the v2 per-mesh symmetric cipher
x25519-dalek = { version = "2", features = ["static_secrets"] } # ECDH for sealing the mesh secret at join
# network-CA signatures (membership certs / revocation). default-features off so
# we don't pull `pkcs8`→`base64ct` (latter needs edition2024, unsupported on 1.79).
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core", "zeroize"] }
# --- networking building blocks ---
socket2 = "0.5"
mdns-sd = "0.11"        # serverless LAN peer discovery
# --- CLI ---
# Upper-bounded: clap 4.5's deps (clap_lex 1.x) require edition2024, which our
# pinned Rust 1.79 toolchain does not support. Lift this when we bump the MSRV.
clap = { version = ">=4.0.0, <4.5.0", features = ["derive"] }
# --- internal crates (path deps, versions inherited from workspace) ---
# Shared base + v2 product crates live under crates/; the v1 (legacy) crates were
# archived under legacy/crates/ but remain path deps so the workspace still builds.
lattice-proto   = { path = "crates/proto", version = "0.7.0" }
lattice-tun     = { path = "crates/tun", version = "0.7.0" }
lattice-net     = { path = "crates/net", version = "0.7.0" }
lattice-crypto  = { path = "legacy/crates/crypto", version = "0.7.0" }
lattice-overlay = { path = "legacy/crates/overlay", version = "0.7.0" }
lattice-engine  = { path = "legacy/crates/engine", version = "0.7.0" }
lattice-membership = { path = "legacy/crates/membership", version = "0.7.0" }
lattice-dht     = { path = "legacy/crates/dht", version = "0.7.0" }
lattice-ipc     = { path = "legacy/crates/ipc", version = "0.7.0" }

# Release profile: optimized, but keep thin debug info for crash triage.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# Faster local debug builds of dependencies without slowing your own code.
[profile.dev.package."*"]
opt-level = 2
