# Fuzz targets for Lattice's untrusted-input parsers. Run with cargo-fuzz on a
# nightly toolchain:  `cargo +nightly fuzz run wire_decode`
#
# Its own workspace so the libfuzzer dependency never touches the main build.
[package]
name = "lattice-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
lattice-proto = { path = "../crates/proto" }
lattice-net = { path = "../crates/net" }

[[bin]]
name = "wire_decode"
path = "fuzz_targets/wire_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stun_parse"
path = "fuzz_targets/stun_parse.rs"
test = false
doc = false
bench = false
