# MiniSync — the reference Lattice connector (docs/EXTENSIONS.md §10).
#
# This crate is DELIBERATELY decoupled from the core Cargo workspace, the same
# way gui/ and fuzz/ are excluded from it. The empty `[workspace]` table below
# declares this directory its OWN workspace root, so `cargo build`/`cargo test`
# run here touch only the connector — they never pull in or rebuild
# crates/mesh, crates/meshd, etc. Nothing in the parent workspace references
# this crate, so it stays a standalone program that merely speaks meshd's IPC
# wire protocol.
[workspace]

[package]
name = "minisync"
version = "0.2.0"
edition = "2021"
# Match the repo toolchain pin (rust-toolchain.toml). Keep deps MSRV-safe.
rust-version = "1.79"
license = "LicenseRef-Lattice-Noncommercial"
description = "MiniSync — folder-sync connector for the Lattice mesh VPN"
publish = false

# The connector binary the user (or, in Phase 2, meshd) launches.
[[bin]]
name = "minisync"
path = "src/main.rs"

# A standalone mock_meshd for manual demos before the real framework ships.
[[bin]]
name = "mock_meshd"
path = "src/bin/mock_meshd.rs"

# Library surface so the integration test can drive the connector internals and
# the in-process mock_meshd harness.
[lib]
name = "minisync"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# clap upper-bounded for the 1.79 MSRV, mirroring the workspace pin (clap 4.5's
# deps need edition2024).
clap = { version = ">=4.0.0, <4.5.0", features = ["derive"] }
sha2 = "0.10"
filetime = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
