[package]
name = "lattice-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local IPC between the Lattice daemon and its GUI/CLI clients."

[dependencies]
lattice-proto.workspace = true
tokio = { workspace = true }
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
# Peer-credential lookup on the IPC socket (SO_PEERCRED / LOCAL_PEERPID) so the
# daemon can authorize requests by the calling process's name.
libc = "0.2"
