[package]
name = "lattice-mesh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "v2 multi-mesh container: per-mesh roster + immutable charter, the set of meshes a computer joins, and the per-computer routing policy that demuxes one TUN across them."

[dependencies]
lattice-proto.workspace = true
serde.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
blake2.workspace = true
chacha20poly1305.workspace = true
# Connector service-registry metadata + IPC event payloads are free-form JSON
# (docs/EXTENSIONS.md); the registry also gossips as JSON (bincode can't round-trip
# serde_json::Value, which uses deserialize_any).
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
