[package]
name = "lattice-meshd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "v2 multi-mesh control-plane daemon (meshd): holds the MeshContainer and serves the v2 IPC over a unix socket."

[[bin]]
name = "meshd"
path = "src/main.rs"

[dependencies]
lattice-mesh = { path = "../mesh", version = "0.7.0" }
lattice-meshrun = { path = "../meshrun", version = "0.7.0" }
lattice-tun.workspace = true
lattice-net.workspace = true
lattice-proto.workspace = true
lattice-dht.workspace = true
bincode.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Embeds a VERSIONINFO resource into meshd.exe (CompanyName/ProductName/version) so Windows
# Defender stops false-flagging the bare binary. Windows target only — see build.rs / BUILD.md.
# `winres` (not the newer `winresource`) is chosen for a tiny, low-MSRV dep tree that builds
# cleanly under the pinned 1.79 the Windows CI job uses.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
