[package]
name = "lattice-overlay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SDN control plane: virtual-IP allocation, peer registry, routing."

[dependencies]
lattice-proto.workspace = true
thiserror.workspace = true
tracing.workspace = true
