[package]
name = "lattice-tun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cross-platform virtual network interface (TUN) for Lattice."

[dependencies]
lattice-proto.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# real utun impl deps land in v0.2

[target.'cfg(target_os = "linux")'.dependencies]
# /dev/net/tun impl deps land in v0.5

[target.'cfg(windows)'.dependencies]
# wintun impl deps land in v0.5
