[package]
name = "lattice-gui"
version = "0.7.3"
edition = "2021"
rust-version = "1.79"
license = "MIT"
description = "Lattice mesh VPN desktop GUI (Tauri shell)."
# Intentionally NOT a workspace member (see root Cargo.toml `exclude`): the
# Tauri/webview toolchain is heavy and built via `cargo tauri`, not `cargo check`.

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["notification"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Lightweight blocking HTTP for the GitHub-release update check (done in Rust, off
# the webview, so the CSP/allowlist stays locked down).
ureq = { version = "2", features = ["json"] }
# Shared wire types. NOTE: the v2 GUI talks to `meshd` via its own newline-JSON
# bridge (see src/main.rs) — these are vestigial v1 deps, candidates for removal.
lattice-proto = { path = "../../crates/proto" }
lattice-ipc = { path = "../../legacy/crates/ipc" }

[features]
# Production builds use the bundled assets; dev uses the Vite server.
custom-protocol = ["tauri/custom-protocol"]
