[package]
name = "lattice-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal control client for the Lattice daemon."

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
lattice-proto.workspace = true
lattice-ipc.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
clap.workspace = true
