[package]
name = "lattice-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The Lattice node runtime: wires the data, transport, and control planes."

[dependencies]
lattice-proto.workspace = true
lattice-crypto.workspace = true
lattice-membership.workspace = true
lattice-tun.workspace = true
lattice-net.workspace = true
lattice-overlay.workspace = true
tokio = { workspace = true }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
