[package]
name = "lattice-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local IPC between the Lattice daemon and its GUI/CLI clients."

[dependencies]
lattice-proto.workspace = true
tokio = { workspace = true }
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
# Peer-credential lookup on the IPC socket (SO_PEERCRED / LOCAL_PEERPID) so the
# daemon can authorize requests by the calling process's name.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Windows IPC uses a named pipe (\\.\pipe\lattice). windows-sys gives us the
# client-PID lookup (GetNamedPipeClientProcessId) for the same caller-name
# authorization the unix path does via peer credentials, plus the pipe security
# descriptor so an unprivileged GUI/CLI can reach a daemon running as admin.
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
